bug fix attempt search bar url on mobile

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,35 +25,43 @@
   .full-page-container.transition-exit .home-titles-developer,
   .full-page-container.transition-exit .home-titles-github {
     opacity: 0; } }
-body {
+body,
+#root {
   box-sizing: border-box;
   color: #45546c;
   font-family: "Josefin Sans";
   font-size: 16px;
+  min-height: -webkit-fill-available;
   margin: 0;
   overflow: hidden;
   padding: 0; }
-  @media (orientation: portrait) and (max-width: 768px) {
-    body {
-      overflow: hidden scroll; } }
-  body a {
+  body a,
+  #root a {
     color: #45546c;
     text-decoration: none; }
-    body a:hover {
+    body a:hover,
+    #root a:hover {
       cursor: pointer; }
-  body button {
+  body button,
+  #root button {
     font-weight: 550; }
-    body button:hover {
+    body button:hover,
+    #root button:hover {
       cursor: pointer; }
-    body button:focus {
+    body button:focus,
+    #root button:focus {
       outline: none; }
   body h1,
-  body h3 {
+  body h3,
+  #root h1,
+  #root h3 {
     font-weight: normal;
     text-align: center; }
-  body h1 {
+  body h1,
+  #root h1 {
     font-family: "Rock Salt"; }
-  body i {
+  body i,
+  #root i {
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -61,7 +69,8 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none; }
-    body i:focus {
+    body i:focus,
+    #root i:focus {
       outline: none; }
 
 @font-face {
@@ -293,29 +302,34 @@ body {
   align-items: center;
   display: flex;
   flex-flow: row nowrap;
-  justify-content: flex-start; }
+  justify-content: flex-start;
+  min-height: -webkit-fill-available;
+  min-width: -webkit-fill-available; }
   .home-container .home-right-side-container {
-    height: 100vh;
-    left: 50vw;
+    min-height: -webkit-fill-available;
+    min-width: -webkit-fill-available;
+    left: 50%;
     position: absolute; }
     @media (orientation: portrait) {
       .home-container .home-right-side-container {
-        height: 50vh;
+        height: 50%;
         left: 0;
         top: 0; } }
     .home-container .home-right-side-container .home-titles-container {
-      height: 50vh;
-      margin-top: 20vh;
+      height: 50%;
+      left: 0;
+      margin-top: 10%;
+      position: absolute;
       z-index: 1;
       align-items: stretch;
       display: flex;
       flex-flow: column nowrap;
       justify-content: flex-start; }
-      @media screen and (orientation: portrait) {
+      @media (orientation: portrait) {
         .home-container .home-right-side-container .home-titles-container {
-          height: 33vh;
-          margin-top: 20vh;
-          width: 100vw; } }
+          height: 66%;
+          margin-top: 35%;
+          width: 100%; } }
       @media screen and (max-width: 768px) {
         .home-container .home-right-side-container .home-titles-container {
           height: 25vh; } }
@@ -346,14 +360,14 @@ body {
     flex-flow: row nowrap;
     justify-content: flex-start;
     align-self: flex-end;
-    height: 65vh;
+    height: 65%;
     position: relative;
-    left: 10vw; }
+    left: 10%; }
     @media (orientation: portrait) {
       .home-container .home-img-container {
-        height: 40vh;
-        left: 12.5vw;
-        width: 75vw;
+        height: 40%;
+        left: 12.5%;
+        width: 75%;
         align-items: flex-start;
         display: flex;
         flex-flow: row nowrap;
@@ -361,10 +375,10 @@ body {
     @media (max-width: 576px) and (orientation: portrait) {
       .home-container .home-img-container {
         left: 0;
-        width: 100vw; } }
+        width: 100%; } }
     @media (orientation: landscape) and (min-width: 1400px) {
       .home-container .home-img-container {
-        width: 40vw; } }
+        width: 40%; } }
     .home-container .home-img-container .home-profile-picture {
       align-self: flex-end;
       max-height: 100%;
